fix overflow issue

--- a/app/components/header/mobile-menu/mobile-menu.module.scss
+++ b/app/components/header/mobile-menu/mobile-menu.module.scss
@@ -7,6 +7,7 @@
 	z-index: 100;
 	transform: translateY(-100%);
 	transition: all 0.3s ease-in-out;
+	overflow-y: scroll;
 
 	.logo {
 		display: flex;
